--- a/rtorrent/.config/rtorrent/rtorrent.rc
+++ b/rtorrent/.config/rtorrent/rtorrent.rc
@@ -101,11 +101,11 @@ schedule2 = watch_directory,5,5,load.start=/home/michael/Downloads/torrents/watc
 # "auto" (start and stop DHT as needed), or "on" (start DHT immediately).
 # The default is "off". For DHT to work, a session directory must be defined.
 #
-#dht.mode.set = auto 
+dht.mode.set = auto 
 
 # UDP port to use for DHT.
 #
-#dht.port.set = 6881
+dht.port.set = 6881
 
 # Enable peer exchange (for torrents not marked private).
 #
